// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for {"alignLabel":"left","hideLabel":true,"stretch":false,"checked":false,"disabled":false,"loading":false,"isDisabledOrLoading":false,"theme":"light"} 1`] = `
":host {
  outline: 0 !important;
  display: inline-block !important;
  vertical-align: top !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  position: relative;
  width: 48px;
  height: 28px;
  flex-shrink: 0;
  display: block;
  margin: 0;
  padding: 0;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #949598;
  border-radius: 14px;
  background-color: transparent;
  outline: 0;
  cursor: pointer;
  transition: background-color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,color var(--p-transition-duration, .24s) ease;
}
button:focus::before {
  content: "";
  position: absolute;
  top: -2px;
  left: -2px;
  right: -2px;
  bottom: -2px;
  border: 2px solid #0A0AFF;
  border-radius: 14px;
}
button:not(:focus-visible)::before {
  border-color: transparent;
}
@media(hover:hover) {
  button:hover {
    border-color: #010205;
    background-color: transparent;
  }
  button:hover .toggle {
    background-color: #010205;
  }
}

.root {
  display: flex;
  align-items: flex-start;
  gap: 8px;
  width: 100%;
  cursor: pointer;
  justify-content: flex-start;
}
.text {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  padding-top: 2px;
  min-width: 0;
  min-height: 0;
  color: #010205;
  order: 0;
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}
.toggle {
  position: absolute;
  top: 2px;
  left: 2px;
  width: 20px;
  height: 20px;
  display: block;
  border-radius: 50%;
  background-color: #010205;
  transform: translate3d(0, 0, 0);
  transition: background-color var(--p-transition-duration, .24s) ease,transform var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":"right","hideLabel":false,"stretch":false,"checked":false,"disabled":false,"loading":false,"isDisabledOrLoading":false,"theme":"light"} 1`] = `
":host {
  outline: 0 !important;
  display: inline-block !important;
  vertical-align: top !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  position: relative;
  width: 48px;
  height: 28px;
  flex-shrink: 0;
  display: block;
  margin: 0;
  padding: 0;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #949598;
  border-radius: 14px;
  background-color: transparent;
  outline: 0;
  cursor: pointer;
  transition: background-color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,color var(--p-transition-duration, .24s) ease;
}
button:focus::before {
  content: "";
  position: absolute;
  top: -2px;
  left: -2px;
  right: -2px;
  bottom: -2px;
  border: 2px solid #0A0AFF;
  border-radius: 14px;
}
button:not(:focus-visible)::before {
  border-color: transparent;
}
@media(hover:hover) {
  button:hover {
    border-color: #010205;
    background-color: transparent;
  }
  button:hover .toggle {
    background-color: #010205;
  }
}

.root {
  display: flex;
  align-items: flex-start;
  gap: 8px;
  width: 100%;
  cursor: pointer;
  justify-content: flex-start;
}
.text {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  padding-top: 2px;
  min-width: 0;
  min-height: 0;
  color: #010205;
  order: 1;
  position: static;
  width: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
}
.toggle {
  position: absolute;
  top: 2px;
  left: 2px;
  width: 20px;
  height: 20px;
  display: block;
  border-radius: 50%;
  background-color: #010205;
  transform: translate3d(0, 0, 0);
  transition: background-color var(--p-transition-duration, .24s) ease,transform var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":"right","hideLabel":false,"stretch":false,"checked":false,"disabled":true,"loading":false,"isDisabledOrLoading":false,"theme":"light"} 1`] = `
":host {
  outline: 0 !important;
  display: inline-block !important;
  vertical-align: top !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  position: relative;
  width: 48px;
  height: 28px;
  flex-shrink: 0;
  display: block;
  margin: 0;
  padding: 0;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #949598;
  border-radius: 14px;
  background-color: transparent;
  outline: 0;
  cursor: pointer;
  transition: background-color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,color var(--p-transition-duration, .24s) ease;
}
button:focus::before {
  content: "";
  position: absolute;
  top: -2px;
  left: -2px;
  right: -2px;
  bottom: -2px;
  border: 2px solid #0A0AFF;
  border-radius: 14px;
}
button:not(:focus-visible)::before {
  border-color: transparent;
}
@media(hover:hover) {
  button:hover {
    border-color: #010205;
    background-color: transparent;
  }
  button:hover .toggle {
    background-color: #010205;
  }
}

.root {
  display: flex;
  align-items: flex-start;
  gap: 8px;
  width: 100%;
  cursor: pointer;
  justify-content: flex-start;
}
.text {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  padding-top: 2px;
  min-width: 0;
  min-height: 0;
  color: #010205;
  order: 1;
  position: static;
  width: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
}
.toggle {
  position: absolute;
  top: 2px;
  left: 2px;
  width: 20px;
  height: 20px;
  display: block;
  border-radius: 50%;
  background-color: #949598;
  transform: translate3d(0, 0, 0);
  transition: background-color var(--p-transition-duration, .24s) ease,transform var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":"right","hideLabel":false,"stretch":true,"checked":false,"disabled":false,"loading":false,"isDisabledOrLoading":false,"theme":"light"} 1`] = `
":host {
  outline: 0 !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  position: relative;
  width: 48px;
  height: 28px;
  flex-shrink: 0;
  display: block;
  margin: 0;
  padding: 0;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #949598;
  border-radius: 14px;
  background-color: transparent;
  outline: 0;
  cursor: pointer;
  transition: background-color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,color var(--p-transition-duration, .24s) ease;
}
button:focus::before {
  content: "";
  position: absolute;
  top: -2px;
  left: -2px;
  right: -2px;
  bottom: -2px;
  border: 2px solid #0A0AFF;
  border-radius: 14px;
}
button:not(:focus-visible)::before {
  border-color: transparent;
}
@media(hover:hover) {
  button:hover {
    border-color: #010205;
    background-color: transparent;
  }
  button:hover .toggle {
    background-color: #010205;
  }
}

.root {
  display: flex;
  align-items: flex-start;
  gap: 8px;
  width: 100%;
  cursor: pointer;
  justify-content: space-between;
}
.text {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  padding-top: 2px;
  min-width: 0;
  min-height: 0;
  color: #010205;
  order: 1;
  position: static;
  width: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
}
.toggle {
  position: absolute;
  top: 2px;
  left: 2px;
  width: 20px;
  height: 20px;
  display: block;
  border-radius: 50%;
  background-color: #010205;
  transform: translate3d(0, 0, 0);
  transition: background-color var(--p-transition-duration, .24s) ease,transform var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":"right","hideLabel":false,"stretch":true,"checked":false,"disabled":false,"loading":false,"isDisabledOrLoading":true,"theme":"dark"} 1`] = `
":host {
  outline: 0 !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  position: relative;
  width: 48px;
  height: 28px;
  flex-shrink: 0;
  display: block;
  margin: 0;
  padding: 0;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #7E7F82;
  border-radius: 14px;
  background-color: transparent;
  outline: 0;
  cursor: not-allowed;
  transition: background-color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,color var(--p-transition-duration, .24s) ease;
}
button:focus::before {
  content: "";
  position: absolute;
  top: -2px;
  left: -2px;
  right: -2px;
  bottom: -2px;
  border: 2px solid #0A0AFF;
  border-radius: 14px;
}
button:not(:focus-visible)::before {
  border-color: transparent;
}
.root {
  display: flex;
  align-items: flex-start;
  gap: 8px;
  width: 100%;
  cursor: auto;
  justify-content: space-between;
}
.text {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  padding-top: 2px;
  min-width: 0;
  min-height: 0;
  color: #7E7F82;
  order: 1;
  position: static;
  width: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
}
.toggle {
  position: absolute;
  top: 2px;
  left: 2px;
  width: 20px;
  height: 20px;
  display: block;
  border-radius: 50%;
  background-color: #FBFCFF;
  transform: translate3d(0, 0, 0);
  transition: background-color var(--p-transition-duration, .24s) ease,transform var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":"right","hideLabel":false,"stretch":true,"checked":false,"disabled":false,"loading":false,"isDisabledOrLoading":true,"theme":"light"} 1`] = `
":host {
  outline: 0 !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  position: relative;
  width: 48px;
  height: 28px;
  flex-shrink: 0;
  display: block;
  margin: 0;
  padding: 0;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #949598;
  border-radius: 14px;
  background-color: transparent;
  outline: 0;
  cursor: not-allowed;
  transition: background-color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,color var(--p-transition-duration, .24s) ease;
}
button:focus::before {
  content: "";
  position: absolute;
  top: -2px;
  left: -2px;
  right: -2px;
  bottom: -2px;
  border: 2px solid #0A0AFF;
  border-radius: 14px;
}
button:not(:focus-visible)::before {
  border-color: transparent;
}
.root {
  display: flex;
  align-items: flex-start;
  gap: 8px;
  width: 100%;
  cursor: auto;
  justify-content: space-between;
}
.text {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  padding-top: 2px;
  min-width: 0;
  min-height: 0;
  color: #949598;
  order: 1;
  position: static;
  width: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
}
.toggle {
  position: absolute;
  top: 2px;
  left: 2px;
  width: 20px;
  height: 20px;
  display: block;
  border-radius: 50%;
  background-color: #010205;
  transform: translate3d(0, 0, 0);
  transition: background-color var(--p-transition-duration, .24s) ease,transform var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":"right","hideLabel":false,"stretch":true,"checked":false,"disabled":false,"loading":true,"isDisabledOrLoading":false,"theme":"light"} 1`] = `
":host {
  outline: 0 !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  position: relative;
  width: 48px;
  height: 28px;
  flex-shrink: 0;
  display: block;
  margin: 0;
  padding: 0;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #949598;
  border-radius: 14px;
  background-color: transparent;
  outline: 0;
  cursor: pointer;
  transition: background-color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,color var(--p-transition-duration, .24s) ease;
}
button:focus::before {
  content: "";
  position: absolute;
  top: -2px;
  left: -2px;
  right: -2px;
  bottom: -2px;
  border: 2px solid #0A0AFF;
  border-radius: 14px;
}
button:not(:focus-visible)::before {
  border-color: transparent;
}
@media(hover:hover) {
  button:hover {
    border-color: #010205;
    background-color: transparent;
  }
  button:hover .toggle {
    background-color: #010205;
  }
}

.root {
  display: flex;
  align-items: flex-start;
  gap: 8px;
  width: 100%;
  cursor: pointer;
  justify-content: space-between;
}
.text {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  padding-top: 2px;
  min-width: 0;
  min-height: 0;
  color: #010205;
  order: 1;
  position: static;
  width: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
}
.toggle {
  position: absolute;
  top: 2px;
  left: 2px;
  width: 20px;
  height: 20px;
  display: block;
  border-radius: 50%;
  background-color: transparent;
  transform: translate3d(0, 0, 0);
  transition: background-color var(--p-transition-duration, .24s) ease,transform var(--p-transition-duration, .24s) ease;
}
.spinner {
  position: absolute;
  top: -4px;
  left: -4px;
  width: 28px;
  height: 28px;
}"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":"right","hideLabel":false,"stretch":true,"checked":true,"disabled":false,"loading":false,"isDisabledOrLoading":false,"theme":"light"} 1`] = `
":host {
  outline: 0 !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  position: relative;
  width: 48px;
  height: 28px;
  flex-shrink: 0;
  display: block;
  margin: 0;
  padding: 0;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #32B85B;
  border-radius: 14px;
  background-color: #32B85B;
  outline: 0;
  cursor: pointer;
  transition: background-color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,color var(--p-transition-duration, .24s) ease;
}
button:focus::before {
  content: "";
  position: absolute;
  top: -6px;
  left: -6px;
  right: -6px;
  bottom: -6px;
  border: 2px solid #0A0AFF;
  border-radius: 18px;
}
button:not(:focus-visible)::before {
  border-color: transparent;
}
@media(hover:hover) {
  button:hover {
    border-color: #258843;
    background-color: #258843;
  }
  button:hover .toggle {
    background-color: #FFF;
  }
}

.root {
  display: flex;
  align-items: flex-start;
  gap: 8px;
  width: 100%;
  cursor: pointer;
  justify-content: space-between;
}
.text {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  padding-top: 2px;
  min-width: 0;
  min-height: 0;
  color: #010205;
  order: 1;
  position: static;
  width: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
}
.toggle {
  position: absolute;
  top: 2px;
  left: 2px;
  width: 20px;
  height: 20px;
  display: block;
  border-radius: 50%;
  background-color: #FFF;
  transform: translate3d(20px, 0, 0);
  transition: background-color var(--p-transition-duration, .24s) ease,transform var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":{"base":"left","xs":"right","s":"left","m":"right","l":"left","xl":"right"},"hideLabel":{"base":true,"xs":false,"s":true,"m":false,"l":true,"xl":false},"stretch":{"base":false,"xs":true,"s":false,"m":true,"l":false,"xl":true},"checked":false,"disabled":false,"loading":false,"isDisabledOrLoading":false,"theme":"light"} 1`] = `
":host {
  outline: 0 !important;
  display: inline-block !important;
  vertical-align: top !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  position: relative;
  width: 48px;
  height: 28px;
  flex-shrink: 0;
  display: block;
  margin: 0;
  padding: 0;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #949598;
  border-radius: 14px;
  background-color: transparent;
  outline: 0;
  cursor: pointer;
  transition: background-color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,color var(--p-transition-duration, .24s) ease;
}
button:focus::before {
  content: "";
  position: absolute;
  top: -2px;
  left: -2px;
  right: -2px;
  bottom: -2px;
  border: 2px solid #0A0AFF;
  border-radius: 14px;
}
button:not(:focus-visible)::before {
  border-color: transparent;
}
@media(min-width:480px) {
  :host {
    display: block !important;
  }
}

@media(min-width:760px) {
  :host {
    display: inline-block !important;
    vertical-align: top !important;
  }
}

@media(min-width:1000px) {
  :host {
    display: block !important;
  }
}

@media(min-width:1300px) {
  :host {
    display: inline-block !important;
    vertical-align: top !important;
  }
}

@media(min-width:1760px) {
  :host {
    display: block !important;
  }
}

@media(hover:hover) {
  button:hover {
    border-color: #010205;
    background-color: transparent;
  }
  button:hover .toggle {
    background-color: #010205;
  }
}

.root {
  display: flex;
  align-items: flex-start;
  gap: 8px;
  width: 100%;
  cursor: pointer;
  justify-content: flex-start;
}
.text {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  padding-top: 2px;
  min-width: 0;
  min-height: 0;
  color: #010205;
  order: 0;
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}
.toggle {
  position: absolute;
  top: 2px;
  left: 2px;
  width: 20px;
  height: 20px;
  display: block;
  border-radius: 50%;
  background-color: #010205;
  transform: translate3d(0, 0, 0);
  transition: background-color var(--p-transition-duration, .24s) ease,transform var(--p-transition-duration, .24s) ease;
}
@media(min-width:480px) {
  .root {
    justify-content: space-between;
  }
  .text {
    order: 1;
    position: static;
    width: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    clip: auto;
    clip-path: none;
    white-space: normal;
  }
}

@media(min-width:760px) {
  .root {
    justify-content: flex-start;
  }
  .text {
    order: 0;
    position: absolute;
    height: 1px;
    width: 1px;
    border: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(1px,1px,1px,1px);
    clip-path: inset(50%);
    white-space: nowrap;
  }
}

@media(min-width:1000px) {
  .root {
    justify-content: space-between;
  }
  .text {
    order: 1;
    position: static;
    width: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    clip: auto;
    clip-path: none;
    white-space: normal;
  }
}

@media(min-width:1300px) {
  .root {
    justify-content: flex-start;
  }
  .text {
    order: 0;
    position: absolute;
    height: 1px;
    width: 1px;
    border: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(1px,1px,1px,1px);
    clip-path: inset(50%);
    white-space: nowrap;
  }
}

@media(min-width:1760px) {
  .root {
    justify-content: space-between;
  }
  .text {
    order: 1;
    position: static;
    width: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    clip: auto;
    clip-path: none;
    white-space: normal;
  }
}
"
`;
